# zarrs_icechunk

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  makefile
.github/workflows/: ci.yml
doc/: version_compatibility_matrix.md
examples/: generate_netcdf.py  virtualizarr_netcdf.py  virtualizarr_netcdf.rs  virtualizarr_netcdf_read.rs
examples/data/: test0.nc  test1.nc
examples/data/test.icechunk.zarr/manifests/: 9MTMJ41BBEECBKN0TNN0
examples/data/test.icechunk.zarr/refs/branch.main/: ref.json
examples/data/test.icechunk.zarr/snapshots/: K7XS78ZEFMGAFXF4DD40  VPDRP2NQCFR17266G0PG
examples/data/test.icechunk.zarr/transactions/: K7XS78ZEFMGAFXF4DD40
src/: lib.rs
tests/: array.rs
