[package]
name = "zarrs_icechunk"
version = "0.0.1"
authors = ["Lachlan Deakin <ljdgit@gmail.com>"]
edition = "2021"
rust-version = "1.78"
description = "icechunk store support for the zarrs crate"
documentation = "https://docs.rs/zarrs_icechunk"
repository = "https://github.com/LDeakin/zarrs_icechunk"
license = "MIT OR Apache-2.0"
keywords = ["zarr", "zarrs", "storage", "store", "icechunk"]
categories = ["encoding"]

[dependencies]
async-trait = "0.1.74"
futures = "0.3.29"
icechunk = "0.1.0-alpha.3"
tokio = "1.34.0"
zarrs_storage = { version = "0.2.2", features = ["async"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4.4"
zarrs = { version = "0.17.1", features = ["async", "sharding", "gzip"] }
zarrs_storage = { version = "0.2.2", features = ["async", "tests"] }
