[package]
name = "zarrs_icechunk"
version = "0.2.1"
authors = ["Lachlan Deakin <ljdgit@gmail.com>"]
edition = "2021"
rust-version = "1.81"
description = "icechunk store support for the zarrs crate"
homepage = "https://zarrs.dev"
documentation = "https://docs.rs/zarrs_icechunk"
repository = "https://github.com/LDeakin/zarrs_icechunk"
license = "MIT OR Apache-2.0"
keywords = ["zarr", "zarrs", "storage", "store", "icechunk"]
categories = ["encoding"]

[dependencies]
async-trait = "0.1.74"
futures = "0.3.29"
icechunk = "0.2.0"
tokio = "1.34.0"
zarrs_storage = { version = "0.3.0", git = "https://github.com/LDeakin/zarrs.git", features = ["async"] }

[dev-dependencies]
serde_json = "1.0.140"
tempfile = "3"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4.4"
zarrs = { version = "0.20.0-dev", git = "https://github.com/LDeakin/zarrs.git", features = ["async", "sharding", "gzip", "fletcher32", "zlib"] }
zarrs_storage = { version = "0.3.0", git = "https://github.com/LDeakin/zarrs.git", features = ["async", "tests"] }
